Movie Clip mode segfaults #48950

Closed
opened 2016-07-26 21:43:06 +02:00 by Joe Button · 6 comments

System Information
Crash happens on all computers I've tried, including 2 Windows 7 computers and 3 Ubuntu ones. Eg. Ubuntu 16.04, 64 bit, Intel 6700 CPU, Nvidia 1060 graphics.

Blender Version
Various, eg. 2.77, c1fd97f

Description
Not sure exactly what's triggering it, but a couple of times I've found that blender crashes either when selecting a clip or, if the clip's already selected in the clip editor, when switching into movie clip mode. Once this starts happening it's 100% repeatable and makes it impossible to re-enter movie clip mode for that clip, ever again. Which is quite bad.

Typing "bpy.data.movieclips- [x].tracking.plane_tracks.active.image" into a scripting window produces the same crash (or a very similar one).

Exact steps for others to reproduce the error
Load attached .blend file, switch to Motion Tracking mode.
OR switch an area to Movie Clip Editor mode, select the movie clip that's available.
crash-tracker.blend
crash-tracker.crash.txt

My first blender bug report, hope I did it right.

**System Information** Crash happens on all computers I've tried, including 2 Windows 7 computers and 3 Ubuntu ones. Eg. Ubuntu 16.04, 64 bit, Intel 6700 CPU, Nvidia 1060 graphics. **Blender Version** Various, eg. 2.77, c1fd97f **Description** Not sure exactly what's triggering it, but a couple of times I've found that blender crashes either when selecting a clip or, if the clip's already selected in the clip editor, when switching into movie clip mode. Once this starts happening it's 100% repeatable and makes it impossible to re-enter movie clip mode for that clip, ever again. Which is quite bad. Typing "bpy.data.movieclips- [x].tracking.plane_tracks.active.image" into a scripting window produces the same crash (or a very similar one). **Exact steps for others to reproduce the error** Load attached .blend file, switch to Motion Tracking mode. OR switch an area to Movie Clip Editor mode, select the movie clip that's available. [crash-tracker.blend](https://archive.blender.org/developer/F328417/crash-tracker.blend) [crash-tracker.crash.txt](https://archive.blender.org/developer/F328418/crash-tracker.crash.txt) My first blender bug report, hope I did it right.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Joeboy

Added subscriber: @Joeboy

Added subscriber: @Sergey

Added subscriber: @Sergey

You did it absolutely right. Fix is coming to Git now..

You did it absolutely right. Fix is coming to Git now..

This issue was referenced by 3d8c2e25a3

This issue was referenced by 3d8c2e25a3af1ea1645f5a6df1b566ae6313e657

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48950
No description provided.