Fix T48950: Movie Clip mode segfaults

Missing linking code in blenloader.